--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,7 +21,7 @@ p {
   margin-block-end: 0em;
 }
 body {
-  font-family: two;
+  font-family: one;
   margin: 0;
 }
 
@@ -104,10 +104,46 @@ body {
     font-family: "Courier New", Courier, monospace;
   }
 }
+.Signature {
+  width: 100%;
+  display: grid;
+  justify-items: end;
+  .content {
+    text-align: center;
+    p.Name {
+      font-size: 1.5rem;
+    }
+    p {
+      padding: 0rem 1rem;
+    }
+  }
+}
+
+.overviewCard {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.SuperAdminHome {
+  .card {
+    .card-header {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-content: space-between;
+      button {
+        justify-self: end;
+        width: 30%;
+      }
+    }
+  }
+}
 @import "./CSS/_Login.scss";
 @import "./CSS/_Overview.scss";
 @import "./CSS/_Navbar.scss";
 @import "./CSS/_Heading.scss";
 @import "./CSS/_Items.scss";
 @import "./CSS/_Inventory.scss";
+@import "./CSS/_Reports.scss";
+@import "./CSS/_Modifies.scss";
 @import "./CSS/_Modal.scss";
