--- a/client/src/CSS/_Inventory.scss
+++ b/client/src/CSS/_Inventory.scss
@@ -1,19 +1,64 @@
 .Inventories {
   .InventoriesContainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
-    .Inventory {
+    table {
       width: 100%;
-      height: 20rem;
-      display: grid;
-      grid-template-rows: 1fr 1fr;
+      .Inventory {
+        cursor: pointer;
+        td {
+          height: 2rem;
+          img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+          }
+        }
+        td.ItemsImage {
+          width: 4rem;
+          vertical-align: middle;
+          padding: 0rem 1rem 0rem 0rem;
+        }
+      }
+    }
+  }
+}
+.SuperAdminHome {
+  .Inventory {
+    td {
+      height: 2rem;
       img {
-        width: 100%;
         height: 100%;
+        width: 100%;
         object-fit: cover;
       }
     }
+    td.buttons {
+      button {
+        margin-left: 0.5rem;
+      }
+    }
+    td.ItemsImage {
+      width: 4rem;
+      vertical-align: middle;
+      padding: 0rem 1rem 0rem 0rem;
+    }
+  }
+}
+table.filteredInventory {
+  .Inventory {
+    cursor: pointer;
+  }
+  td {
+    height: 2rem;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  td.ItemsImage {
+    width: 4rem;
+    vertical-align: middle;
+    padding: 0rem 1rem 0rem 0rem;
   }
 }
 
