--- a/client/src/CSS/_Modal.scss
+++ b/client/src/CSS/_Modal.scss
@@ -1,7 +1,8 @@
 .createdModal,
 .deleteModalContainer,
 .galleryModalContainer,
-.editModalContainer {
+.editModalContainer,
+.AddModalContainer {
   position: fixed;
   left: 0;
   top: 0;
@@ -13,6 +14,7 @@
   z-index: 2;
   display: none;
   .Modal,
+  .AddModal,
   .deleteModal,
   .galleryModal,
   .editModal {
@@ -24,7 +26,8 @@
     .closingModal,
     .deleteClosingModal,
     .galleryClosingModal,
-    .editClosingModal {
+    .editClosingModal,
+    .AddClosingModal {
       color: white;
       font-size: 2rem;
       cursor: pointer;
@@ -75,5 +78,12 @@
         }
       }
     }
+  }
+}
+
+.SuperAdminCreatedModal {
+  .Modal {
+    width: 90vw;
+    height: 80vh;
   }
 }
