--- a/client/src/CSS/_Navbar.scss
+++ b/client/src/CSS/_Navbar.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   height: 100%;
   padding: 0.5rem 1rem;
-  background-color: rgb(0, 32, 92);
+  background-color: rgb(219, 241, 220);
   min-height: calc(100vh - 70px);
   nav {
     > div {
@@ -10,10 +10,13 @@
         li {
           padding: 0.2rem;
           .active {
-            color: #0150a5;
+            color: rgb(19, 19, 19);
             border-bottom: 1px solid rgba($color: #0150a5, $alpha: 0.5);
             box-shadow: 2px 1px 0px 0px rgba($color: #0150a5, $alpha: 0.5);
           }
+        }
+        .nav-link {
+          color: rgb(46, 46, 46);
         }
         button {
           width: 100%;
