--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -21,7 +21,7 @@ p {
   margin-block-end: 0em;
 }
 body {
-  font-family: one;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
@@ -77,7 +77,7 @@ body {
 }
 .App {
   .content {
-    padding: 2rem;
+    padding: 1rem;
   }
 }
 
@@ -122,6 +122,7 @@ body {
 .overviewCard {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  cursor: pointer;
 }
 
 .SuperAdminHome {
